# molo

./: .coveragerc  .deploy.yaml  .editorconfig  .eslintrc  .gitignore  .sass-lint.yml  .travis.yml  CHANGES.rst  FED.md  LICENSE  MANIFEST.in  PROFILES_CHANGES.rst  README.md  README.rst  Untitled.html  VERSION  VERSION_BACKUP_29116  VERSION_BASE_29116  fabfile.py  gulpfile.js  local_test_settings.py  manage.py  npm-shrinkwrap.json  package-lock.json  package.json  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.pip  requirements.txt  run-tests.sh  setup.cfg  setup.py  setup_testapp.sh  test_settings.py  tox.ini  travis.sh
Application/: .deploy.yaml  .travis.yml  MANIFEST.in  README.rst  manage.py  requirements-dev.txt  setup.cfg  setup.py  test_settings.py
app1/: models.py
celery_app/: tasks.py  urls.py  views.py
client/: .babelrc  .eslintrc  .jscsrc  .jshintrc  gulpfile.babel.js  package.json
docs/: Makefile  api.rst  badges.rst  conf.py  features.rst  getting-started.rst  index.rst  installation.rst  make.bat  merged-cms.rst  molo_bundle.rst  multiple-languages.rst  plugins.rst  release-notes.rst  template-patterns.rst  template-tags.rst  testing.rst
etc/: nginx.conf  supervisord.conf
mobi-application/: .deploy.yaml  .gitignore  .travis.yml  MANIFEST.in  README.rst  manage.py  requirements.txt  setup.cfg  setup.py  test_settings.py
mobiApp/: .deploy.yaml  .travis.yml  MANIFEST.in  README.rst  manage.py  requirements.txt  setup.cfg  setup.py  test_settings.py
molo/: crontab.txt  (+1 more)
molo-media-root-testing/: some_media.txt
(+2017 files in other folders)
