[flake8]
exclude = ve,docs,molo/profiles/migrations/*,molo/core/migrations/*,molo/core/wagtailsearch,molo/core/management/commands/update_index.py,molo/core/cookiecutter
ignore = F405

[pytest]
addopts = --doctest-modules --verbose --ignore=molo/core/cookiecutter --ds=local_test_settings molo --nomigrations

[metadata]
license-file = LICENSE
